--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>3.6.1</version>
+             <configuration>
+                <source>22</source>
+                <target>22</target>
+            </configuration>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.codeborne/selenide -->
