--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
                 </dependency>
             </dependencies>
         </plugin>
+        <plugin>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-maven</artifactId>
+            <version>2.10.0</version> <!-- проверьте актуальную версию -->
+        </plugin>
     </plugins>
 </build>
 
